--- a/loja_vendas-main/css/style.css
+++ b/loja_vendas-main/css/style.css
@@ -4,13 +4,11 @@ html {
 }
 
 h1{
-color:red    
+color:purple   
 }
 
 div{
-    background-color:red
-    height:20px;
-    width:20px;
+    color:green
 
 
 }
