--- a/loja_vendas-main/css/style.css
+++ b/loja_vendas-main/css/style.css
@@ -7,8 +7,31 @@ h1{
 color:purple   
 }
 
-div{
-    color:green
+.div1{
+    color:green;
+	height:150px;
+	width:18%;
+	background-color: pink;
+display:inline-block;
+	
+}
+.div2{
+    color:blue;
+	height:150px;
+	width:18%;
+	background-color: orange;
+display:inline-block;
 
 
 }
+
+.div3{
+    color:brown;
+	height:150px;
+	width:18%;
+	background-color: black;
+	margin-top:200px;
+	
+	
+}
+
